# encodergroup-app

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
client-new/: .env.example  Dockerfile  dockerignore  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client-new/public/: index.html  manifest.json
client-new/src/: App.tsx  index.css
client-new/src/components/: ProtectedRoute.tsx
client-new/src/contexts/: AuthContext.tsx  NotificationContext.tsx
client-new/src/pages/: NotFound.tsx
client-new/src/routes/: AppRoutes.tsx
docker/nginx/: default.conf
server/: .env.docker  .env.example  Dockerfile  package.json  pyproject.toml  requirements.txt  test_email.py
server/app/: main.py  requirements.txt
server/app/api/: deps.py
server/app/api/routes/: auth.py  notifications.py  receipts.py  requests.py  temp_forgot_password.py
server/app/api/ws/: notifications.py
server/app/core/: config.py  database.py  email_service.py  security.py
server/app/models/: notification.py  receipt.py  request.py  user.py
server/app/services/: notification_service.py
server/app/templates/: email_verification.py  password_changed.py  password_reset.py  request_notification.py
server/app/utils/: email_sender.py  email_service.py
server/scripts/: migrate_email_verification.py  simple_migrate.py
server/src/: index.ts
server/src/config/: database.ts  db.ts  email.ts  jwt.ts
server/src/controllers/: auth.controller.ts.bak  authController.ts  receipt.controller.ts
server/src/middleware/: auth.middleware.ts.bak  auth.ts
server/src/models/: User.ts  receipt.model.ts  user.model.ts.bak
server/src/routes/: auth.routes.ts  authRoutes.ts  receipt.routes.ts
server/src/utils/: generateToken.ts.bak
(+83 files in other folders)
